crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1280x720_gwlf.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
assertion_line: 538
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.98
  mean_precision: 1
  mean_rmse: 0.7074
  mean_reprojection_rmse: 1.2165
  p50_translation_error: 0.0039
  p90_translation_error: 0.0194
  p99_translation_error: 0.176
  p50_rotation_error: 0.2971
  p90_rotation_error: 2.6871
  p99_rotation_error: 14.8229
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0032_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.79
    - filename: scene_0000_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6617
    - filename: scene_0033_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.4108
    - filename: scene_0009_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.0663
