crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1280x720_sota.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.96
  mean_precision: 1
  mean_rmse: 0.2767
  mean_reprojection_rmse: 0.1984
  p50_translation_error: 0.0005
  p90_translation_error: 0.0044
  p99_translation_error: 0.0246
  p50_rotation_error: 0.0642
  p90_rotation_error: 0.3406
  p99_rotation_error: 2.1016
  mean_hamming: 0.02
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 6.2264
