crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1920x1080_edlines_moments.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 0.9888888888888889
  mean_rmse: 0.7578
  mean_reprojection_rmse: 2.7391
  p50_translation_error: 0.0044
  p90_translation_error: 0.0636
  p99_translation_error: 0.2719
  p50_rotation_error: 0.7515
  p90_rotation_error: 8.6779
  p99_rotation_error: 55.3621
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0007_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.6417
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.9426
