crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1920x1080_gwlf.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
assertion_line: 538
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 1.3345
  mean_reprojection_rmse: 4.7572
  p50_translation_error: 0.005
  p90_translation_error: 0.2756
  p99_translation_error: 0.5179
  p50_rotation_error: 0.6674
  p90_rotation_error: 21.2054
  p99_rotation_error: 49.7222
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0031_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 5.0949
    - filename: scene_0038_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.4291
    - filename: scene_0018_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.2659
    - filename: scene_0042_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.1988
