crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1920x1080_moments_culling.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
assertion_line: 548
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 1.1461
  mean_reprojection_rmse: 6.5366
  p50_translation_error: 0.0107
  p90_translation_error: 0.4346
  p99_translation_error: 1.2099
  p50_rotation_error: 2.2439
  p90_rotation_error: 24.3961
  p99_rotation_error: 72.8505
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0038_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.5484
    - filename: scene_0011_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.432
    - filename: scene_0035_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.1177
    - filename: scene_0044_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.7072
    - filename: scene_0022_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3989
