crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_3840x2160.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 1.1157
  mean_reprojection_rmse: 1.0615
  p50_translation_error: 0.0108
  p90_translation_error: 0.066
  p99_translation_error: 0.132
  p50_rotation_error: 0.3804
  p90_rotation_error: 1.2359
  p99_rotation_error: 6.5636
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0017_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.7252
    - filename: scene_0043_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.0442
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.5031
    - filename: scene_0040_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3212
